including authors on book
