# server/api/openapi-with-docs.json
@@ -41,7 +41,8 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "string",
+              "format": "guid"
             },
             "x-position": 1
           }
@@ -80,7 +81,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/AuthorDto"
+                "$ref": "#/components/schemas/EditAuthorRequest"
               }
             }
           },
@@ -111,7 +112,8 @@
             "in": "path",
             "required": true,
             "schema": {
-              "type": "string"
+              "type": "string",
+              "format": "guid"
             },
             "x-position": 1
           }
@@ -141,7 +143,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/AuthorDto"
+                "$ref": "#/components/schemas/CreateAuthorRequest"
               }
             }
           },
@@ -577,6 +579,36 @@
           }
         }
       },
+      "CreateAuthorRequest": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "name"
+        ],
+        "properties": {
+          "name": {
+            "type": "string",
+            "minLength": 1
+          }
+        }
+      },
+      "EditAuthorRequest": {
+        "type": "object",
+        "additionalProperties": false,
+        "required": [
+          "name"
+        ],
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "guid"
+          },
+          "name": {
+            "type": "string",
+            "minLength": 1
+          }
+        }
+      },
       "BookDto": {
         "type": "object",
         "additionalProperties": false,
@@ -610,6 +642,13 @@
                 "$ref": "#/components/schemas/GenreDto"
               }
             ]
+          },
+          "authors": {
+            "type": "array",
+            "nullable": true,
+            "items": {
+              "$ref": "#/components/schemas/AuthorDto"
+            }
           }
         }
       },
